# swoosh

./: Cargo.toml
swoosh/: .envrc  Cargo.toml  LICENSE  README.md  list.py  scripts_with_contents.md
swoosh/.config/: config.json
swoosh/.github/workflows/: cd.yml
swoosh/src/: action.rs  app.rs  cli.rs  components.rs  config.rs  main.rs
swoosh/src/components/: fps.rs  home.rs  list.rs  options.rs  settings.rs  value.rs
swoosh/src/components/image_processing/: compress.rs  mod.rs  transform.rs
