[package]
name = "swoosh"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"

image = { version = "0.25.5", features = ["default"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tracing = "0.1"
tracing-subscriber = "0.3"

bitflags = "1"
tempfile = "3"
tracing-test = "0.2"